--- a/DIPR.WebMVC/Views/Home/About.cshtml
+++ b/DIPR.WebMVC/Views/Home/About.cshtml
@@ -21,15 +21,13 @@
     <div class="container-fluid">
         <div class="row content">
             <div class="col-sm-3 sidenav">
-                <h2>Baby 101</h2>
+                <h2>Baby 101 <small>(Under Construction)</small></h2>
                 <ul class="nav nav-pills nav-stacked">
                     <li class="active"><a href="#section1">Home</a></li>
-                    <li><a href="#section2">Friends</a></li>
-                    <li><a href="#section3">Family</a></li>
-                    <li><a href="#section3">Photos</a></li>
+                    
                 </ul><br>
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search Blog...">
+                    <input type="text" class="form-control" placeholder="Search Baby 101...">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">
                             <span class="glyphicon glyphicon-search"></span>
@@ -41,17 +39,16 @@
             <div class="col-sm-9">
                 <h4><small>RECENT POSTS</small></h4>
                 <hr>
-                <h2>I Love Food</h2>
-                <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
-                <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
-                <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>New Born Care: Best Practices</h2>
+                <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Jan 12, 2021.</h5>
+                <h5><span class="label label-danger">Newborn</span> <span class="label label-primary">Advice</span></h5><br>
+                <p>Everyone has an idea of what the best care for your baby may look like. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <br><br>
 
-                <h4><small>RECENT POSTS</small></h4>
                 <hr>
                 <h2>Officially Blogging</h2>
-                <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
-                <h5><span class="label label-success">Lorem</span></h5><br>
+                <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Jan 11, 2021.</h5>
+                <h5><span class="label label-success">Info</span></h5><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
