--- a/DIPR.WebMVC/Views/Home/About.cshtml
+++ b/DIPR.WebMVC/Views/Home/About.cshtml
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <div class="row content">
             <div class="col-sm-3 sidenav">
-                <h2>Baby 101 <small>(Under Construction)</small></h2>
+                <h2>Baby 101</h2>
                 <ul class="nav nav-pills nav-stacked">
                     <li class="active"><a href="#section1">Home</a></li>
                     
@@ -39,18 +39,24 @@
             <div class="col-sm-9">
                 <h4><small>RECENT POSTS</small></h4>
                 <hr>
+                <h2>Is Screen-Time All That Bad?</h2>
+                <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Jan 13, 2021.</h5>
+                <h5><span class="label label-default">Toddler</span> <span class="label label-success">Childhood</span> <span class="label label-warning">Opinion</span></h5><br>
+                <p>There is a lot of conversation these days about how much screen-time your child should be getting during the day. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <br><br>
+
                 <h2>New Born Care: Best Practices</h2>
                 <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Jan 12, 2021.</h5>
-                <h5><span class="label label-danger">Newborn</span> <span class="label label-primary">Advice</span></h5><br>
+                <h5><span class="label label-danger">Newborn</span> <span class="label label-primary">Expert Advice</span></h5><br>
                 <p>Everyone has an idea of what the best care for your baby may look like. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <br><br>
 
                 <hr>
                 <h2>Officially Blogging</h2>
-                <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Jan 11, 2021.</h5>
-                <h5><span class="label label-success">Info</span></h5><br>
+                <h5><span class="glyphicon glyphicon-time"></span> Post by Max Sigmon, Jan 11, 2021.</h5>
+                <h5><span class="label label-info">From DIPR</span></h5><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
+            </div>
             </div>
         </div>
 </body>
