page clean up/typos/buttons

--- a/DIPR.WebMVC/Views/Home/About.cshtml
+++ b/DIPR.WebMVC/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Baby 101";
 }
 <head>
 <style>
@@ -45,8 +45,8 @@
                 <p>There is a lot of conversation these days about how much screen-time your child should be getting during the day. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <br><br>
 
-                <h2>New Born Care: Best Practices</h2>
-                <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Jan 12, 2021.</h5>
+                <h2>Newborn Care: Best Practices</h2>
+                <h5><span class="glyphicon glyphicon-time"></span> Post by Dr. Jane Doe, Jan 12, 2021.</h5>
                 <h5><span class="label label-danger">Newborn</span> <span class="label label-primary">Expert Advice</span></h5><br>
                 <p>Everyone has an idea of what the best care for your baby may look like. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <br><br>
